test(product): 상품 통합테스트 구현